--- a/client/tag-todo.jade
+++ b/client/tag-todo.jade
@@ -5,10 +5,10 @@ todo
         }
 
     form(onsubmit="{ add }")
-        input(type="text", placeholder="Needs to be done", name="todo")
+        input(type="text", placeholder="To be done", name="todo")
     ul
         li(each="{items}")
-            span \#{id + 1} 
+            span \#{id + 4} 
             span(class="{completed: done}") {title}
             &nbsp;
             a(if="{!done}", onclick="{ parent.done }") done
